examples/hello_world/tests/snapshots/localised_help__help_ja.snap
---
source: examples/hello_world/tests/localised_help.rs
expression: output
---
⁨hello-world⁩ を使用して、設定、環境変数、CLIにまたがる階層化された挨拶を試しましょう

Usage: 使用方法:
⁨hello-world⁩ [オプション] <コマンド>

詳細は --help を参照してください。

Commands:
  context     エージェント向けの機械可読なコマンドコンテキストを出力します。
  greet       設定されたテンプレートを使用してフレンドリーな挨拶を表示します。
  take-leave  受信者への別れのワークフローの進行を説明します。
  help        Print this message or the help of the given subcommand(s)

Options:
  -c, --config <PATH>
          Path to the configuration file

  -r, --recipient <NAME>
          Recipient of the greeting when supplied on the CLI

  -s, --salutation <WORD>
          Replacement salutations supplied on the CLI

      --is-excited
          Enables an enthusiastic delivery mode from the CLI

      --is-quiet
          Enables a quiet delivery mode from the CLI

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
