examples/hello_world/tests/snapshots/localised_help__missing_subcommand_error_en_us.snap
---
source: examples/hello_world/tests/localised_help.rs
expression: output
---
Error: 
   0: [91mfailed to parse command line: error: Pick a workflow: ⁨context, greet, take-leave, help⁩

      Usage: Usage:
      ⁨hello-world⁩ [OPTIONS] <COMMAND>

      Visit --help for details.

      Commands:
        context     Emits machine-readable command context for agents.
        greet       Prints a friendly greeting using any configured templates.
        take-leave  Describes how the farewell workflow proceeds for the recipient.
        help        Print this message or the help of the given subcommand(s)

      Options:
        -c, --config <PATH>      Path to the configuration file
        -r, --recipient <NAME>   Recipient of the greeting when supplied on the CLI
        -s, --salutation <WORD>  Replacement salutations supplied on the CLI
            --is-excited         Enables an enthusiastic delivery mode from the CLI
            --is-quiet           Enables a quiet delivery mode from the CLI
        -h, --help               Print help (see more with '--help')
        -V, --version            Print version[0m
   1: [91merror: Pick a workflow: ⁨context, greet, take-leave, help⁩

      Usage: Usage:
      ⁨hello-world⁩ [OPTIONS] <COMMAND>

      Visit --help for details.

      Commands:
        context     Emits machine-readable command context for agents.
        greet       Prints a friendly greeting using any configured templates.
        take-leave  Describes how the farewell workflow proceeds for the recipient.
        help        Print this message or the help of the given subcommand(s)

      Options:
        -c, --config <PATH>      Path to the configuration file
        -r, --recipient <NAME>   Recipient of the greeting when supplied on the CLI
        -s, --salutation <WORD>  Replacement salutations supplied on the CLI
            --is-excited         Enables an enthusiastic delivery mode from the CLI
            --is-quiet           Enables a quiet delivery mode from the CLI
        -h, --help               Print help (see more with '--help')
        -V, --version            Print version[0m

Location:
   <rust-src>/library/core/src/ops/function.rs[0m:[35m250[0m

Backtrace omitted. Run with RUST_BACKTRACE=1 environment variable to display it.
Run with RUST_BACKTRACE=full to include source snippets.
